<resources>
    <string name="app_name">Система поиска автобусных маршрутов</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">Откуда</string>
    <string name="textviewEndPoint">Куда</string>
    <string name="buttonSearchBus">Поиск маршрута</string>
    <string name="buttonBusesActivity">Маршруты</string>
    <string name="buttonStationsActivity">Остановки</string>
    <string name="title_activity_stations">Список остановок</string>
    <string name="title_activity_buses">Список маршрутов</string>
    <string name="buttonCreate">Добавить</string>
    <string name="buttonDelete">Удалить</string>
    <string name="nameStation">Название остановки</string>
    <string name="nameBus">Название маршрута</string>
    <string name="save">Сохранить</string>
</resources>