<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/Theme.BusSearching.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.BusSearching.PopupOverlay"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleMargin="4dp"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp">

        <Spinner
                android:text="@string/textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerStartPoint"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp">

        <Spinner
                android:text="@string/textviewEndPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerEndPoint"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp">

        <Button
                android:text="@string/buttonSearchBus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/findBusButton"
                android:onClick="findBusButtonClick"
                android:layout_weight="1" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

        <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/textViewResult"
                android:textSize="20sp"
                android:textAlignment="center"
                tools:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp">

        <Button
                android:text="@string/buttonBusesActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBusesActivity"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:onClick="navigateBusesButtonClick"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:text="@string/buttonStationsActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonStationsActivity"
                android:layout_weight="1"
                android:onClick="navigateStationsButtonClick"
                style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>